# lex_upload

./: .gitignore  LICENSE  README.md  pyproject.toml
lex_upload/: config.json.example  main.py
lex_upload/lib/: __init__.py  filewatcher.py  pdf_check.py  upload.py
tests/: test_lex_upload.py
